<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.InfoFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/info"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:text="@string/goal"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:text="@string/technologie_tags"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:justificationMode="inter_word"
        android:text="@string/mvvm_android_jetpack_navigation_rxjava_retrofit_glide_dagger2_material_design_room"
        android:textSize="18sp" />
    <ImageView
        android:id="@+id/splashscreen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/geogebra"
        android:layout_marginTop="64dp"
        android:layout_gravity="center"/>

</LinearLayout>